<resources>

    <string name="app_name">My Application</string>

    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="edit">Editar</string>
    <string name="save">Salvar</string>
    <string name="delete">Excluir</string>
    <string name="cancel">Cancelar</string>
    <string name="date_format">dd/mm/aaaa</string>
    <string name="loading">Carregando…</string>

    <string name="care">Cuidados</string>
    <string name="productions">Produções</string>

    <!-- Login Activity -->
    <string name="email_input_hint">E-mail</string>
    <string name="password_input_hint">Senha</string>
    <string name="button_sign_in">Entrar</string>
    <string name="sign_up">Criar conta</string>
    <string name="sign_in_error">Não foi possível entrar na sua conta. Tente novamente</string>
    <string name="forgot_password">Esqueci minha senha.</string>
    <string name="inform_email_reset">Informe seu email para enviarmos seu link de redefinição de senha.</string>
    <string name="password_reset_fail">Não foi possível enviar o email de redefinição de senha.</string>
    <string name="password_reset_sent_title">Redefinir senha?</string>
    <string name="password_reset_email">Será enviado um email para redefinição da sua senha.</string>
    <string name="password_reset_sent">Email de redefinição de senha enviado.</string>
    <string name="email_reset_sent_title">Redefinir e-mail?</string>
    <string name="email_reset_msg">Será enviado um e-mail para redefinição do seu e-mail.</string>

    <!-- SignUp Activity -->
    <string name="name_input_hint">Nome</string>
    <string name="confirm_password_input_hint">Confirme sua Senha</string>
    <string name="button_sign_up">Cadastrar-se</string>
    <string name="error_sign_up">Não foi possível criar sua conta. Tente novamente.</string>

    <!-- Email Verification Activity -->
    <string name="check_email_title">Verifique seu email</string>
    <string name="check_email_message">Foi enviado um email de verificação para:</string>
    <string name="your_email">Seu e-mail.</string>
    <string name="check_email_continue">Acesse o link de confirmação no e-mail e então click em Entrar, para acessar sua conta.</string>
    <string name="account_deleted">Sua conta foi excluída</string>
    <string name="account_delete_error">Não foi possível sua excluir sua conta. Tente novamente.</string>

    <!-- Home Activity -->
    <string name="user_name">Nome do Produtor</string>
    <string name="button_animals">Animais</string>
    <string name="button_production">Produção</string>
    <string name="button_report">Relatório</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="card_daily_production">Hoje</string>
    <string name="card_cows">Vacas</string>
    <string name="card_monthly_production">Esse mês</string>
    <string name="card_births">Nascimentos</string>

    <!-- Animals List Activity -->
    <string name="toolbar_animals_title">Animais</string>
    <string name="animal_photo">Foto do animal</string>
    <string name="animal_name">Nome do animal</string>
    <string name="fab_add_animal">Adicionar animal</string>
    <string name="animal_list_error">Carregando animal…</string>

    <!-- Animal Details Activity -->
    <string name="animal_id">Identificação</string>
    <string name="animal_race">Raça</string>
    <string name="animal_birth">Data de Nascimento</string>
    <string name="animal_weight">Peso</string>
    <string name="animal_gender">Gênero</string>
    <string name="male">Macho</string>
    <string name="female">Fêmea</string>
    <string name="producing_status">Situação de Produção</string>
    <string name="producing">Produzindo</string>
    <string name="not_producing">Não produzindo</string>
    <string name="not_informed">Não informado</string>
    <string name="error_loading_animal">"Não foi possível carregar o animal. Tente Novamente"</string>
    <string name="animal_delete_error">Erro ao deletar animal</string>
    <string name="animal_deleting">Deletando animal</string>
    <string name="animal_delete_confirm">Deletar animal?</string>
    <string name="animal_delete_message">Essa ação deletará todas as produções e dados desse animal.</string>

    <!-- Animal Form Activity -->
    <string name="animal_birth_not_selected">Selecionar data</string>
    <string name="animal_birth_delete_question">Excluir data de nascimento?</string>
    <string name="production_question">Este animal está produzindo?</string>
    <string name="animal_deleted">Animal excluído</string>
    <string name="animal_saved">Animal salvo</string>
    <string name="animal_not_saved">Não foi possível salvar o animal. Tente novamente.</string>
    <string name="inform_animal_id">Informe a identificação do animal</string>
    <array name="image_fonts">
        <item>Galeria</item>
        <item>Excluir</item>
    </array>
    <string name="saving_photo">Salvando Foto…</string>
    <string name="error_saving_photo">Não foi possível salvar foto</string>
    <string name="choose_image">Escolha uma imagem</string>
    <string name="error_update_photo">Não foi possível atualizar a foto</string>

    <!-- Care Adapter -->
    <string name="care_date">Data do cuidado</string>

    <!-- Care List Activity -->
    <string name="toolbar_care_title">Cuidados</string>
    <string name="fab_add_cuidado">Adicionar cuidado</string>

    <!-- Care Activity -->
    <string name="care_desc">Descrição</string>
    <string name="care_med">Medicamentos</string>
    <string name="care_deleted">Cuidado deletado</string>
    <string name="care_saved">Cuidado salvo</string>

    <!-- Production Details Activity -->
    <string name="production_animal_id">Identificação do animal</string>
    <string name="production_date">Data da produção</string>
    <string name="production_liters">Litros produzidos</string>

    <!-- Production Activity -->
    <string name="liters">Litros</string>
    <string name="date">Data</string>

    <!-- Production List Activity -->
    <string name="toolbar_production_title">Produções</string>
    <string name="add_production">Adicionar produção</string>
    <string name="yesterday">Ontem</string>

    <!-- Production Form Activity -->
    <string name="production_saved">Produção salva</string>
    <string name="production_deleted">Produção excluída</string>
    <string name="production_hour">Hora da produção</string>
    <string name="production_invalid_liters">Informe os litros produzidos</string>
    <string name="production_hour_not_select">Selecionar hora</string>
    <string name="production_hour_select">Selecione a hora da produção</string>
    <string name="production_updated">Produção atualizada</string>
    <string name="production_save_error">Não foi possível salvar produção</string>
    <string name="production_invalid_hour">Hora inválida</string>
    <string name="production_delete_error">Não foi possível deletar produção</string>
    <string name="production_not_producing">Animal não está produzindo</string>
    <string name="search_animal">Buscar animal</string>
    <string name="select_animal">Selecione o animal</string>
    <string name="animal_with_prods">Não é possível mudar o gênero de um animal com produções cadastradas</string>

    <!-- Report Activity -->
    <string name="toolbar_report_title">Relatório</string>
    <string name="generate">Gerar</string>
    <string name="hint_initial_date">Do dia</string>
    <string name="hint_final_date">Até o dia</string>
    <string name="report_placeholder">0</string>
    <string name="report_total_production">Produção total</string>
    <string name="report_daily_average">Média diária</string>
    <string name="report_cows_producing">Vacas produzindo</string>
    <string name="report_cow_average">Média por vaca</string>
    <string name="report_cow_produced_most">Maior produção</string>
    <string name="report_cow_produced_least">Menor produção</string>
    <string name="report_care">Cuidados</string>
    <string name="report_births">Nascimentos</string>

    <!-- Profile Activity -->
    <string name="toolbar_title_profile">Perfil</string>
    <string name="name_updated">Nome atualizado</string>
    <string name="redefine_password">Redefinir Senha</string>
    <string name="redefine_email">Alterar E-mail</string>
    <string name="delete_account">Deletar minha Conta</string>
    <string name="sign_out">Sair</string>
    <string name="confirm_sign_out">Sair da sua conta?</string>
    <string name="finish_sign_up">Finalizar cadastro</string>
    <string name="inform_your_name">Informe seu nome</string>
    <string name="inform_valid_email">Informe um email válido</string>
    <string name="inform_password">Informe uma senha</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="passwords_not_match">As senhas não conferem</string>
    <string name="error_update_name">Não foi possível atualizar seu nome. Tente novamente.</string>
    <string name="profile_delete_account_confirm">Deletar conta?</string>
    <string name="profile_delete_account_msg">Essa ação apagará todos os dados da sua conta, assim como os animais e produções.</string>
    <string name="profile_deleting_data">Deletando dados…</string>

    <!-- Redefine E-mail Activity -->
    <string name="toolbar_title_redefine_email">Redefinir E-mail</string>
    <string name="redefine_email_msg">Informe seu novo endereço de e-mail para enviarmos um e-mail de redefinição.</string>
    <string name="new_email_hint">Novo e-mail</string>
    <string name="confirm_new_email_hint">Confirme o novo e-mail</string>
    <string name="continue_redefine_email">Continuar</string>
    <string name="emails_do_not_match">E-mails não conferem</string>
    <string name="redefine_email_sent">E-mail de redefinição enviado</string>
    <string name="redefine_email_not_sent">Não foi possível enviar e-mail. Tente novamente.</string>

</resources>