<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="@dimen/medium_padding">

        <ImageView
            android:id="@+id/animalPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/animal_photo"
            android:src="@drawable/round_calendar_today_24"
            app:tint="@color/green_500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLiters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/liters"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvProdDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/date"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>

</layout>
