<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ReportActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green_500"
            app:title="@string/toolbar_report_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/llData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/llInitialDate"
                        android:layout_width="152dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/extra_small_margin"
                        android:background="@drawable/date_time_border"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/medium_padding"
                        android:paddingVertical="@dimen/small_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_initial_date" />

                        <TextView
                            android:id="@+id/tvInitialDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/animal_birth_not_selected"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/medium_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llFinalDate"
                        android:layout_width="152dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/extra_small_margin"
                        android:background="@drawable/date_time_border"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/medium_padding"
                        android:paddingVertical="@dimen/small_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_final_date" />

                        <TextView
                            android:id="@+id/tvFinalDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/animal_birth_not_selected"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/medium_text" />

                    </LinearLayout>

                </LinearLayout>

                <TableLayout
                    android:id="@+id/llReport"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/llData"
                    app:layout_constraintStart_toStartOf="@+id/llData"
                    app:layout_constraintTop_toBottomOf="@id/llData">

                    <TableRow android:paddingVertical="@dimen/small_padding">

                        <TextView
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/report_total_production"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvTotalProd"
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/loading"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:paddingVertical="@dimen/small_padding">

                        <TextView
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/report_daily_average"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvDailyAvg"
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/loading"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:paddingVertical="@dimen/small_padding">

                        <TextView
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/report_cows_producing"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvProducingCows"
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/loading"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:paddingVertical="@dimen/small_padding">

                        <TextView
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/report_cow_average"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvCowAvg"
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/loading"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:paddingVertical="@dimen/small_padding">

                        <TextView
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/report_cow_produced_most"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvHigherProd"
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/loading"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:paddingVertical="@dimen/small_padding">

                        <TextView
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/report_cow_produced_least"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvLowerProd"
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/loading"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow android:paddingVertical="@dimen/small_padding">

                        <TextView
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/report_births"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvBirths"
                            android:layout_weight="1"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/loading"
                            android:textStyle="bold" />

                    </TableRow>

                </TableLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</layout>
